Version next
* Updated translations for: da, de, el, es-ES, fr, ja-JP, nl, pl, ro, sr, sv-SE, zh-CN, zh-TW

Version 2014.05.03.06
* Fix download button icon styles (Australis)
* Fix Windows and Linux status bar styles. OS X Still needs work. (Australis)
* Support legacy status bar panel (Australis)

Version 2014.04.27.21
* Fix toolbars overlapping download finished animation.
* Australis style fixes.
* Australis first-run widget migration.
* Updated translations for: zh-CN

Version 2014.02.18.00b
* Improve fullscreen HTML5 video detection (fix on YouTube).
* Update license to MPL 2.0.
* Update locales for new strings.
* Updated translations for: sr

Version 2014.01.29.16b
* Add advanced option to hide status popup on fullscreen HTML5 video.
* Fix JS Download API integration.
* Fix status/add-on bar item placement regression from Australis support.
* Updated translations for: ro

Version 2014.01.25.23b
* Initial Australis support.
* Drop support for Firefox 23.0 and older.
* Classic download manager is not available in Firefox 26.0 and newer.

Version 2013.10.31.22
* Updated translations for: es-ES, he

Version 2013.09.14.22b
* Don't use Firefox 22 JavaScript syntax in new Downloads implementation.

Version 2013.09.14.15b
* Support new Downloads.jsm API in Firefox 26+.
* Support UI changes in Firefox 26.
* Update locales for new strings.
* Updated translations for: en-US, pl, sr

Version 2013.05.14.21b
* Fix sticky extension status messages. Instead of simply hiding the status text, actually clear the saved status messages.
* Fix download button panel when the S4E download button is not present on a toolbar.
* Update locales for new strings.
* Updated translations for: el, es-ES, he, ja-JP, tr, zh-TW

Version 2013.05.12.17b
* Add option to control the download button action (Firefox default / panel / library / classic window).
* Add an option to disable the download complete animation.
* Add an option to automatically clear the download complete button highlight.