@@ -40,6 +40,8 @@
 <!ENTITY status4evar.option.round "Round">
 <!ENTITY status4evar.option.firefoxdefault "Firefox default">
 <!ENTITY status4evar.option.download.library "Library">
+<!ENTITY status4evar.option.download.tab "Tab">
+<!ENTITY status4evar.option.download.thirdparty "3rd Party">
 
 <!ENTITY status4evar.unit.milliseconds "milliseconds">
 <!ENTITY status4evar.unit.seconds "seconds">
